# Huffman

./: .gitignore
experimenten/: compare_algorithms.py  encoding_times.csv  file_sizes.csv  opt_two_pass.csv  sliding_averages.csv  two_pass_averages.csv
experimenten/encoded/: alice_encoded_sliding  beowulf_encoded_sliding  cat_encoded_sliding  colors_encoded_sliding  dracula_encoded_sliding  lena_encoded_sliding  lipsum_encoded_sliding  moby_encoded_sliding  shakespeare_encoded_sliding
experimenten/opt/sliding/: block  static
experimenten/opt/two_pass/: 2p  sliding
experimenten/venv1/: pip-selfcheck.json
indienen/: Makefile.dms  sources
indienen/extra/experimenten/: compare_algorithms.py  encoding_times.csv  file_sizes.csv  huffman  opt_sliding.csv  sliding_averages.csv
indienen/src/: constants.h  main.c  main.h
indienen/src/adaptive/: adaptive.h  decode.c  encode.c
indienen/src/block/: block.c  block.h  encode.c
indienen/src/datastructures/: bit_operations.h  huff_node.c  huff_node.h  input.h  order_list.h  stack.c
indienen/src/huffman/: huffman.c
indienen/src/sliding/: decode.c  encode.c  sliding.c  (+1 more)
project/: CMakeLists.txt  constants.h  huffman.c  huffman.h  input.c  input.h  main.c  main.h  out.txt  test.txt
project/adaptive/: adaptive.c
project/block/: block.h  decode.c
project/datastructures/: bit_operations.c  bit_operations.h  input.c  input.h  order_list.c  stack.c  stack.h  structs.h
project/huffman/: huffman.c  huffman.h
project/sliding/: encode.c
project/twopass/: encode.c  twopass.h
verslag/: verslag.aux  verslag.tex
(+10 files in other folders)
